--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
     "columns = ['Name','Alignment','Initial Chain Deployer','Block Explorer','Announcement Date', 'Mainnet Launch Date','Shutdown Date'\n",
-    "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'L1 BatchInbox \"to address\"', 'L1 BatchInbox \"from address\"','L1 Output Oracle','L1 Output Oracle \"from address\"']"
+    "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'BatchInbox \"to address\"', 'BatchInbox \"from address\"','L2 Output Oracle','L2 Output Oracle \"from address\"']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,263 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_chains_tracking/../helper_functions/pandas_utils.py:193: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[column] = pd.to_datetime(df[column], format=format).dt.strftime(format)\n",
-      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_chains_tracking/../helper_functions/pandas_utils.py:193: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[column] = pd.to_datetime(df[column], format=format).dt.strftime(format)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Alignment</th>\n",
-       "      <th>Block Explorer</th>\n",
-       "      <th>Announcement Date</th>\n",
-       "      <th>Mainnet Launch Date</th>\n",
-       "      <th>Shutdown Date</th>\n",
-       "      <th>L1 Standard Bridge Contract</th>\n",
-       "      <th>L1 NFT Bridge Contract</th>\n",
-       "      <th>L1 BatchInbox \"to address\"</th>\n",
-       "      <th>L1 BatchInbox \"from address\"</th>\n",
-       "      <th>L1 Output Oracle</th>\n",
-       "      <th>L1 Output Oracle \"from address\"</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Metis</td>\n",
-       "      <td>[Legacy Forks]</td>\n",
-       "      <td>https://andromeda-explorer.metis.io/</td>\n",
-       "      <td>2021-11-03</td>\n",
-       "      <td>2021-11-19T00:00:00.000000Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0x3980c9ed79d2c191A89E02Fa3529C60eD6e9c04b</td>\n",
-       "      <td>0x5EA23Cb3D609F4522a21ADcC9Ca366e76C23c40f</td>\n",
-       "      <td>0x6a1db7d799fba381f2a518ca859ed30cb8e1d41a</td>\n",
-       "      <td>0xcdf02971871b7736874e20b8487c019d28090019</td>\n",
-       "      <td>0xf209815e595cdf3ed0aaf9665b1772e608ab9380</td>\n",
-       "      <td>0x9cb01d516d930ef49591a05b09e0d33e6286689d</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>OP Mainnet (OVM2)</td>\n",
-       "      <td>[Legacy OP Mainnet]</td>\n",
-       "      <td>https://optimistic.etherscan.io/</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-11-11T21:00:00.000000Z</td>\n",
-       "      <td>2023-06-06T16:00:00.000000Z</td>\n",
-       "      <td>0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1</td>\n",
-       "      <td>0x5a7749f83b81b301cab5f48eb8516b986daef23d</td>\n",
-       "      <td>0x5E4e65926BA27467555EB562121fac00D24E9dD2</td>\n",
-       "      <td>0x6887246668a3b87F54DeB3b94Ba47a6f63F32985</td>\n",
-       "      <td>0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19</td>\n",
-       "      <td>0x473300df21D047806A082244b417f96b32f13A33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aevo</td>\n",
-       "      <td>[OP Stack Hack]</td>\n",
-       "      <td>https://explorer.aevo.xyz/</td>\n",
-       "      <td>2022-09-28</td>\n",
-       "      <td>2023-04-07T00:00:00.000000Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0x4082C9647c098a6493fb499EaE63b5ce3259c574</td>\n",
-       "      <td>0x2e7d7B188D663F38c2E4fF9C59328458A2D676F0</td>\n",
-       "      <td>0x253887577420Cb7e7418cD4d50147743c8041b28</td>\n",
-       "      <td>0x889e21d7BA3d6dD62e75d4980A4Ad1349c61599d</td>\n",
-       "      <td>0x909E51211e959339EFb14b36f5A50955a8ae3770</td>\n",
-       "      <td>0x75ACb7ae6C76B3f5cA049431FE2c0797dD002b90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OP Mainnet (Bedrock)</td>\n",
-       "      <td>[Superchain Member]</td>\n",
-       "      <td>https://optimistic.etherscan.io/</td>\n",
-       "      <td>2023-05-15</td>\n",
-       "      <td>2023-06-06T17:00:00.000000Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1</td>\n",
-       "      <td>0x5a7749f83b81b301cab5f48eb8516b986daef23d</td>\n",
-       "      <td>0xff00000000000000000000000000000000000010</td>\n",
-       "      <td>0x6887246668a3b87F54DeB3b94Ba47a6f63F32985</td>\n",
-       "      <td>0xdfe97868233d1aa22e815a266982f2cf17685a27</td>\n",
-       "      <td>0x473300df21D047806A082244b417f96b32f13A33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>BOBA</td>\n",
-       "      <td>[Legacy Forks]</td>\n",
-       "      <td>https://bobascan.com/</td>\n",
-       "      <td>2021-09-20</td>\n",
-       "      <td>2021-09-20T00:00:00.000000Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0xdc1664458d2f0B6090bEa60A8793A4E66c2F1c00</td>\n",
-       "      <td>0xB095a3A4f4e6b4Fd9825a4932Ad6522D4949c8fF</td>\n",
-       "      <td>0xfbd2541e316948b259264c02f370ed088e04c3db</td>\n",
-       "      <td>0xfa46908b587f9102e81ce6c43b7b41b52881c57f</td>\n",
-       "      <td>0xdE7355C971A5B733fe2133753Abd7e5441d441Ec</td>\n",
-       "      <td>0x5558c63d5bf229450995adc160c023C9F4d4bE80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>OP Mainnet (OVM1)</td>\n",
-       "      <td>[Legacy OP Mainnet]</td>\n",
-       "      <td>https://optimistic.etherscan.io/</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-06-23T00:00:00.000000Z</td>\n",
-       "      <td>2021-11-11T18:00:00.000000Z</td>\n",
-       "      <td>0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0x4BF681894abEc828B212C906082B444Ceb2f6cf6</td>\n",
-       "      <td>0x6887246668a3b87F54DeB3b94Ba47a6f63F32985</td>\n",
-       "      <td>0xE969C2724d2448F1d1A6189d3e2aA1F37d5998c1</td>\n",
-       "      <td>0x473300df21D047806A082244b417f96b32f13A33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Zora</td>\n",
-       "      <td>[Collab Chain]</td>\n",
-       "      <td>explorer.zora.co</td>\n",
-       "      <td>2023-05-25</td>\n",
-       "      <td>2023-06-14T00:00:00.000000Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0x3e2Ea9B92B7E48A52296fD261dc26fd995284631</td>\n",
-       "      <td>0x83A4521A3573Ca87f3a971B169C5A0E1d34481c3</td>\n",
-       "      <td>0x6F54Ca6F6EdE96662024Ffd61BFd18f3f4e34DFf</td>\n",
-       "      <td>0x625726c858dBF78c0125436C943Bf4b4bE9d9033</td>\n",
-       "      <td>0x9E6204F750cD866b299594e2aC9eA824E2e5f95c</td>\n",
-       "      <td>0x48247032092e7b0ecf5dEF611ad89eaf3fC888Dd</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Name            Alignment  \\\n",
-       "0                 Metis       [Legacy Forks]   \n",
-       "1     OP Mainnet (OVM2)  [Legacy OP Mainnet]   \n",
-       "2                  Aevo      [OP Stack Hack]   \n",
-       "3  OP Mainnet (Bedrock)  [Superchain Member]   \n",
-       "4                  BOBA       [Legacy Forks]   \n",
-       "5     OP Mainnet (OVM1)  [Legacy OP Mainnet]   \n",
-       "6                  Zora       [Collab Chain]   \n",
-       "\n",
-       "                         Block Explorer Announcement Date  \\\n",
-       "0  https://andromeda-explorer.metis.io/        2021-11-03   \n",
-       "1      https://optimistic.etherscan.io/               NaN   \n",
-       "2            https://explorer.aevo.xyz/        2022-09-28   \n",
-       "3      https://optimistic.etherscan.io/        2023-05-15   \n",
-       "4                 https://bobascan.com/        2021-09-20   \n",
-       "5      https://optimistic.etherscan.io/               NaN   \n",
-       "6                      explorer.zora.co        2023-05-25   \n",
-       "\n",
-       "           Mainnet Launch Date                Shutdown Date  \\\n",
-       "0  2021-11-19T00:00:00.000000Z                          NaN   \n",
-       "1  2021-11-11T21:00:00.000000Z  2023-06-06T16:00:00.000000Z   \n",
-       "2  2023-04-07T00:00:00.000000Z                          NaN   \n",
-       "3  2023-06-06T17:00:00.000000Z                          NaN   \n",
-       "4  2021-09-20T00:00:00.000000Z                          NaN   \n",
-       "5  2021-06-23T00:00:00.000000Z  2021-11-11T18:00:00.000000Z   \n",
-       "6  2023-06-14T00:00:00.000000Z                          NaN   \n",
-       "\n",
-       "                  L1 Standard Bridge Contract  \\\n",
-       "0  0x3980c9ed79d2c191A89E02Fa3529C60eD6e9c04b   \n",
-       "1  0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1   \n",
-       "2  0x4082C9647c098a6493fb499EaE63b5ce3259c574   \n",
-       "3  0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1   \n",
-       "4  0xdc1664458d2f0B6090bEa60A8793A4E66c2F1c00   \n",
-       "5  0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1   \n",
-       "6  0x3e2Ea9B92B7E48A52296fD261dc26fd995284631   \n",
-       "\n",
-       "                       L1 NFT Bridge Contract  \\\n",
-       "0  0x5EA23Cb3D609F4522a21ADcC9Ca366e76C23c40f   \n",
-       "1  0x5a7749f83b81b301cab5f48eb8516b986daef23d   \n",
-       "2  0x2e7d7B188D663F38c2E4fF9C59328458A2D676F0   \n",
-       "3  0x5a7749f83b81b301cab5f48eb8516b986daef23d   \n",
-       "4  0xB095a3A4f4e6b4Fd9825a4932Ad6522D4949c8fF   \n",
-       "5                                         NaN   \n",
-       "6  0x83A4521A3573Ca87f3a971B169C5A0E1d34481c3   \n",
-       "\n",
-       "                   L1 BatchInbox \"to address\"  \\\n",
-       "0  0x6a1db7d799fba381f2a518ca859ed30cb8e1d41a   \n",
-       "1  0x5E4e65926BA27467555EB562121fac00D24E9dD2   \n",
-       "2  0x253887577420Cb7e7418cD4d50147743c8041b28   \n",
-       "3  0xff00000000000000000000000000000000000010   \n",
-       "4  0xfbd2541e316948b259264c02f370ed088e04c3db   \n",
-       "5  0x4BF681894abEc828B212C906082B444Ceb2f6cf6   \n",
-       "6  0x6F54Ca6F6EdE96662024Ffd61BFd18f3f4e34DFf   \n",
-       "\n",
-       "                 L1 BatchInbox \"from address\"  \\\n",
-       "0  0xcdf02971871b7736874e20b8487c019d28090019   \n",
-       "1  0x6887246668a3b87F54DeB3b94Ba47a6f63F32985   \n",
-       "2  0x889e21d7BA3d6dD62e75d4980A4Ad1349c61599d   \n",
-       "3  0x6887246668a3b87F54DeB3b94Ba47a6f63F32985   \n",
-       "4  0xfa46908b587f9102e81ce6c43b7b41b52881c57f   \n",
-       "5  0x6887246668a3b87F54DeB3b94Ba47a6f63F32985   \n",
-       "6  0x625726c858dBF78c0125436C943Bf4b4bE9d9033   \n",
-       "\n",
-       "                             L1 Output Oracle  \\\n",
-       "0  0xf209815e595cdf3ed0aaf9665b1772e608ab9380   \n",
-       "1  0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19   \n",
-       "2  0x909E51211e959339EFb14b36f5A50955a8ae3770   \n",
-       "3  0xdfe97868233d1aa22e815a266982f2cf17685a27   \n",
-       "4  0xdE7355C971A5B733fe2133753Abd7e5441d441Ec   \n",
-       "5  0xE969C2724d2448F1d1A6189d3e2aA1F37d5998c1   \n",
-       "6  0x9E6204F750cD866b299594e2aC9eA824E2e5f95c   \n",
-       "\n",
-       "              L1 Output Oracle \"from address\"  \n",
-       "0  0x9cb01d516d930ef49591a05b09e0d33e6286689d  \n",
-       "1  0x473300df21D047806A082244b417f96b32f13A33  \n",
-       "2  0x75ACb7ae6C76B3f5cA049431FE2c0797dD002b90  \n",
-       "3  0x473300df21D047806A082244b417f96b32f13A33  \n",
-       "4  0x5558c63d5bf229450995adc160c023C9F4d4bE80  \n",
-       "5  0x473300df21D047806A082244b417f96b32f13A33  \n",
-       "6  0x48247032092e7b0ecf5dEF611ad89eaf3fC888Dd  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter the DataFrame\n",
     "filtered_df = df[df['L1 Standard Bridge Contract'].notnull() & df['L1 Standard Bridge Contract'].str.startswith('0x')\\\n",
-    "                 & df['L1 BatchInbox \"to address\"'].notnull() & df['L1 BatchInbox \"to address\"'].str.startswith('0x')]\n",
+    "                 & df['BatchInbox \"to address\"'].notnull() & df['BatchInbox \"to address\"'].str.startswith('0x')]\n",
     "filtered_df.reset_index(inplace=True, drop=True)\n",
     "\n",
     "# Format timeseries columns\n",
@@ -308,37 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_chains_tracking/../helper_functions/duneapi_utils.py:131: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype(str).str.lower()\n",
-      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_chains_tracking/../helper_functions/duneapi_utils.py:132: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].replace(\"nan\", np.nan)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table at: dune_upload.op_stack_chain_metadata\n",
-      "Response status code: 200\n",
-      "Response content: b'{\"success\":true}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Post to Dune API\n",
     "d.write_dune_api_from_pandas(filtered_df, 'op_stack_chain_metadata',\\\n",
@@ -362,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
