--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
-    "at_table_name = 'OP Deployer Data'\n",
+    "at_table_name = 'OP Contract Data'\n",
     "\n",
     "excl_projects = [\n",
     "    '',\n",
@@ -46,7 +46,7 @@
     "    deployers = pd.read_csv('csv_outputs/' + name + '.csv')\n",
     "else:\n",
     "    # Dune query: https://dune.com/queries/2457627\n",
-    "    deployers = d.get_dune_data(query_id, name = name)"
+    "    deployers = d.get_dune_data(query_id, name = name, num_hours_to_rerun=6)"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
