--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -46,7 +46,7 @@
     "    deployers = pd.read_csv('csv_outputs/' + name + '.csv')\n",
     "else:\n",
     "    # Dune query: https://dune.com/queries/2457627\n",
-    "    deployers = d.get_dune_data(query_id, name = name, num_hours_to_rerun=6)"
+    "    deployers = d.get_dune_data(query_id, name = name, num_hours_to_rerun = 6, performance = \"large\")"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
