add mempool lag

--- a/l1_base_fees/l1_base_fee_stats.ipynb
+++ b/l1_base_fees/l1_base_fee_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,275 @@
     "\n",
     "dfs = []\n",
     "for i in csvs:\n",
-    "    tmp = pd.read_csv(input_folder + i + '.csv')\n",
+    "    tmp = pd.read_csv(input_folder + '/'+ i + '.csv')\n",
     "    dfs.append(tmp)\n",
     "\n",
-    "df_data = pd.concat(dfs)\n",
+    "df = pd.concat(dfs)\n",
     "\n",
-    "display(df_data.head(10))"
+    "# Sort the data by 'number' in ascending order\n",
+    "df = df.sort_values(by='number')\n",
+    "\n",
+    "display(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check Base Fee Deltas by Interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Define the block intervals\n",
+    "# intervals = [1, 5, 25, 50, 75, 100, 125, 150]\n",
+    "\n",
+    "# # Initialize a dictionary to hold the differences\n",
+    "# diffs = {}\n",
+    "\n",
+    "# # Calculate the base price difference for each interval\n",
+    "# for interval in intervals:\n",
+    "#     df[f'diff_{interval}'] = df['base_fee_gwei'].diff(periods=interval)\n",
+    "#     diffs[interval] = df[f'diff_{interval}'].dropna()\n",
+    "\n",
+    "# diffs\n",
+    "\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# # Create a figure and axis\n",
+    "# fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "\n",
+    "# # Convert the dictionary to a DataFrame for easier plotting\n",
+    "# df_diffs = pd.DataFrame(diffs)\n",
+    "\n",
+    "# # Create boxplots\n",
+    "# df_diffs.boxplot(ax=ax, showfliers=False)\n",
+    "\n",
+    "# # Set the title and labels\n",
+    "# ax.set_title('Distribution of Base Fee Price Differences at Different Block Intervals')\n",
+    "# ax.set_xlabel('Block Intervals')\n",
+    "# ax.set_ylabel('Base Fee Price Difference (Gwei)')\n",
+    "\n",
+    "# # Show the plot\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify Spikes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Start Index</th>\n",
+       "      <th>End Index</th>\n",
+       "      <th>Duration (blocks)</th>\n",
+       "      <th>Duration (minutes)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187931</th>\n",
+       "      <td>2391997</td>\n",
+       "      <td>2391998</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187932</th>\n",
+       "      <td>2392004</td>\n",
+       "      <td>2392005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187933</th>\n",
+       "      <td>2392008</td>\n",
+       "      <td>2392009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187934</th>\n",
+       "      <td>2392011</td>\n",
+       "      <td>2392012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187935</th>\n",
+       "      <td>2392019</td>\n",
+       "      <td>2392020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>187936 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Start Index  End Index  Duration (blocks)  Duration (minutes)\n",
+       "0                 4          6                  2                 0.4\n",
+       "1                 7          8                  1                 0.2\n",
+       "2                15         16                  1                 0.2\n",
+       "3                28         30                  2                 0.4\n",
+       "4                36         37                  1                 0.2\n",
+       "...             ...        ...                ...                 ...\n",
+       "187931      2391997    2391998                  1                 0.2\n",
+       "187932      2392004    2392005                  1                 0.2\n",
+       "187933      2392008    2392009                  1                 0.2\n",
+       "187934      2392011    2392012                  1                 0.2\n",
+       "187935      2392019    2392020                  1                 0.2\n",
+       "\n",
+       "[187936 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage change in base fee from one block to the next\n",
+    "df['pct_change'] = df['base_fee_gwei'].pct_change() * 100\n",
+    "\n",
+    "# Initialize an empty list to hold the start and end indices of each spike\n",
+    "spikes = []\n",
+    "\n",
+    "# Initialize a variable to hold the start index of the current spike\n",
+    "start_index = None\n",
+    "\n",
+    "# Iterate over the DataFrame\n",
+    "for i in range(len(df)):\n",
+    "    # If a spike has not started yet\n",
+    "    if start_index is None:\n",
+    "        # If the base fee increases by 10% or more, start a new spike\n",
+    "        if df['pct_change'].iloc[i] >= 10:\n",
+    "            start_index = i\n",
+    "    # If a spike has already started\n",
+    "    else:\n",
+    "        # If the base fee returns to within 10% of the base fee at the start of the spike, end the current spike\n",
+    "        if abs(df['base_fee_gwei'].iloc[i] - df['base_fee_gwei'].iloc[start_index]) <= df['base_fee_gwei'].iloc[start_index] * 0.1:\n",
+    "            spikes.append((start_index, i))\n",
+    "            start_index = None\n",
+    "\n",
+    "# Convert the list of spikes to a DataFrame\n",
+    "df_spikes = pd.DataFrame(spikes, columns=['Start Index', 'End Index'])\n",
+    "\n",
+    "# Calculate the duration of each spike (in blocks)\n",
+    "df_spikes['Duration (blocks)'] = df_spikes['End Index'] - df_spikes['Start Index']\n",
+    "\n",
+    "# Calculate the duration of each spike (in minutes) assuming a block time of 12 seconds\n",
+    "df_spikes['Duration (minutes)'] = df_spikes['Duration (blocks)'] * 12 / 60\n",
+    "\n",
+    "# Add start and end block numbers and times to the DataFrame\n",
+    "df_spikes['Start Block Number'] = df.iloc[df_spikes['Start Index']]['number'].values\n",
+    "df_spikes['End Block Number'] = df.iloc[df_spikes['End Index']]['number'].values\n",
+    "df_spikes['Start Time'] = df.iloc[df_spikes['Start Index']]['time'].values\n",
+    "df_spikes['End Time'] = df.iloc[df_spikes['End Index']]['time'].values\n",
+    "\n",
+    "# Calculate the starting base fee and peak base fee of each spike\n",
+    "df_spikes['Starting Base Fee'] = df.iloc[df_spikes['Start Index']]['base_fee_gwei'].values\n",
+    "df_spikes['Peak Base Fee'] = df.iloc[df_spikes['Start Index']:df_spikes['End Index']].apply(lambda x: df['base_fee_gwei'].iloc[x['Start Index']:x['End Index']].max(), axis=1)\n",
+    "\n",
+    "# Calculate the percentage gain of each spike\n",
+    "df_spikes['Percentage Gain'] = (df_spikes['Peak Base Fee'] - df_spikes['Starting Base Fee']) / df_spikes['Starting Base Fee'] * 100\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "df_spikes\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "new-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
