--- a/helper_functions/get_eth_balance_by_block.ipynb
+++ b/helper_functions/get_eth_balance_by_block.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,35 @@
     "op_node = os.environ[\"OP_NODE\"]\n",
     "op_etherscan = os.environ[\"OP_ETHERSCAN_API\"]\n",
     "\n",
-    "ts = '2023-04-25 23:59:00'\n",
+    "ts = '2022-04-25 23:59:00'\n",
     "address = '0x4200000000000000000000000000000000000011'\n",
     "# print(ts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "address: 0x4200000000000000000000000000000000000011\n",
+      "block number: 6457016\n",
+      "https://optimistic.etherscan.io/block/6457016\n",
+      "eth balance: 32.11432345713203\n"
+     ]
+    }
+   ],
    "source": [
     "print('address: ' + str(address) )\n",
     "# bn = w.getBlockByTimestamp(op_etherscan,ts)\n",
-    "bn = 94256243 #hardcoded - alchemy estimator was off\n",
+    "bn = 6457016 #hardcoded - alchemy estimator was off by ~3 hours\n",
     "print('block number: ' + str(bn))\n",
     "print('https://optimistic.etherscan.io/block/' + str(bn))\n",
-    "b = w.alchemy_get_block_by_number(op_node,bn)\n",
-    "bal = w.alchemy_get_eth_balance_by_block(op_node, b, address)\n",
+    "\n",
+    "bal = w.get_eth_balance_by_block(op_node, address, bn)\n",
     "print('eth balance: ' + str(bal) )"
    ]
   }
