--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
-    "columns = ['Name','Status','Alignment','Initial Chain Deployer','Block Explorer','Announcement Date', 'Mainnet Launch Date','Shutdown Date'\n",
+    "columns = ['Name','Status','Alignment','Dune Database Name','Initial Chain Deployer','Block Explorer','Announcement Date', 'Mainnet Launch Date','Shutdown Date'\n",
     "           ,'L1 Standard Bridge Contract', 'L1 NFT Bridge Contract', 'BatchInbox \"to address\"', 'BatchInbox \"from address\"','L2 Output Oracle','L2 Output Oracle \"from address\"']"
    ]
   },
