--- a/contracts_tracking/get_runtime_bytecode_snippet.ipynb
+++ b/contracts_tracking/get_runtime_bytecode_snippet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,29 +18,53 @@
     "load_dotenv()\n",
     "import os\n",
     "\n",
-    "endpoint = os.environ[\"OP_NODE\"]"
+    "endpoint = os.environ[\"OP_NODE\"]\n",
+    "\n",
+    "l2_output_signatures = [\n",
+    "        'getL2Output(uint256)'\n",
+    "        ,'getL2OutputIndexAfter(uint256)'\n",
+    "        ,'getL2OutputAfter(uint256)'\n",
+    "        ,'latestOutputIndex()'\n",
+    "        ,'nextOutputIndex()'\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x636da31330\n"
+      "('getL2Output(uint256)', 0x63a25ae557),\n",
+      "('getL2OutputIndexAfter(uint256)', 0x637f006420),\n",
+      "('getL2OutputAfter(uint256)', 0x63cf8e5cf0),\n",
+      "('latestOutputIndex()', 0x6369f16eec),\n",
+      "('nextOutputIndex()', 0x636abcf563)\n"
      ]
     }
    ],
    "source": [
-    "function_signature = 'test(uint256)'\n",
     "opcode = 'PUSH4'\n",
+    "test_arr = []\n",
     "\n",
-    "bytecode = w3py.get_bytecode_pattern(endpoint, function_signature, opcode)\n",
+    "for sig in l2_output_signatures:\n",
+    "        bytecode = w3py.get_bytecode_pattern(endpoint, sig, opcode)\n",
+    "        test_arr.append([sig,bytecode])\n",
     "\n",
-    "print(bytecode)"
+    "formatted_arr = []\n",
+    "\n",
+    "for item in test_arr:\n",
+    "    function_name = item[0]\n",
+    "    opcode = item[1].replace(\"'0x\", \"0x\")  # Remove the '0x' prefix\n",
+    "    formatted_arr.append(f\"('{function_name}', {opcode})\")\n",
+    "\n",
+    "# Join the formatted array using commas\n",
+    "formatted_string = \",\\n\".join(formatted_arr)\n",
+    "\n",
+    "print(formatted_string)"
    ]
   }
  ],
