--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,40 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xC0D3C0d3c0d3c0d3C0D3c0d3C0D3c0d3c0D30011\n",
-      "op mainnet | SequencerFeeVault: Proxy 804379218602095682779, Impl 0\n",
-      "0xC0d3c0D3c0d3C0D3C0D3C0d3c0D3C0D3c0d30019\n",
-      "op mainnet | BaseFeeVault: Proxy 132796296393862548890, Impl 0\n",
-      "0xc0D3c0D3C0d3c0d3c0d3C0d3c0d3C0d3C0D3001A\n",
-      "op mainnet | L1FeeVault: Proxy 2379284741915407004776, Impl 0\n",
-      "0xC0D3C0d3c0d3c0d3C0D3c0d3C0D3c0d3c0D30011\n",
-      "base | SequencerFeeVault: Proxy 0, Impl 0\n",
-      "0xC0d3c0D3c0d3C0D3C0D3C0d3c0D3C0D3c0d30019\n",
-      "base | BaseFeeVault: Proxy 15636799320591736912, Impl 0\n",
-      "0xc0D3c0D3C0d3c0d3c0d3C0d3c0d3C0d3C0D3001A\n",
-      "base | L1FeeVault: Proxy 522816712785375471781, Impl 0\n",
-      "0xC0D3C0d3c0d3c0d3C0D3c0d3C0D3c0d3c0D30011\n",
-      "zora network | SequencerFeeVault: Proxy 65841638794920689343, Impl 0\n",
-      "0xC0d3c0D3c0d3C0D3C0D3C0d3c0D3C0D3c0d30019\n",
-      "zora network | BaseFeeVault: Proxy 0, Impl 0\n",
-      "0xc0D3c0D3C0d3c0d3c0d3C0d3c0d3C0d3C0D3001A\n",
-      "zora network | L1FeeVault: Proxy 36301274667904967258, Impl 0\n",
-      "0xC0D3C0d3c0d3c0d3C0D3c0d3C0D3c0d3c0D30011\n",
-      "public goods network | SequencerFeeVault: Proxy 0, Impl 0\n",
-      "0xC0d3c0D3c0d3C0D3C0D3C0d3c0D3C0D3c0d30019\n",
-      "public goods network | BaseFeeVault: Proxy 0, Impl 0\n",
-      "0xc0D3c0D3C0d3c0d3c0d3C0d3c0d3C0d3C0D3001A\n",
-      "public goods network | L1FeeVault: Proxy 0, Impl 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for chain in chains_rpcs:\n",
     "    chain_name = chain[0]\n",
@@ -99,27 +68,13 @@
     "        implementation_abi = vault[3]\n",
     "\n",
     "        implementation_contract = w3py.get_implementation_contract(w3_conn, vault_address, vault_abi)\n",
-    "        print(implementation_contract)\n",
+    "        time.sleep(1)\n",
     "        proxy_balance = w3_conn.eth.contract(address=vault_address, abi=implementation_abi)\n",
-    "        implementation_balance = w3_conn.eth.contract(address=implementation_contract, abi=implementation_abi)\n",
+    "        # implementation_balance = w3_conn.eth.contract(address=implementation_contract, abi=implementation_abi)\n",
     "        time.sleep(1)\n",
     "        proxy_processed = proxy_balance.functions.totalProcessed().call()\n",
-    "        time.sleep(1)\n",
-    "        implementation_processed = implementation_balance.functions.totalProcessed().call()\n",
-    "\n",
-    "        print(chain_name + ' | ' + vault_name + ': Proxy ' + str(proxy_processed) + ', Impl ' + str(implementation_processed))\n",
+    "        print(chain_name + ' | ' + vault_name + ': Proxy ' + str(proxy_processed))\n",
     "        time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w3_conn = Web3(Web3.HTTPProvider('https://rpc.publicgoods.network'))\n",
-    "implementation_balance = w3_conn.eth.contract(address='0xefCf0c8faFB425997870f845e26fC6cA6EE6dD5C', abi=implementation_abi)\n",
-    "implementation_processed = implementation_balance.functions.totalProcessed().call()"
    ]
   }
  ],
