--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import sys\n",
     "import time\n",
+    "import json\n",
     "sys.path.append(\"../helper_functions\")\n",
     "import web3py_utils as w3py\n",
     "from web3 import Web3\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "op mainnet | SequencerFeeVault: Proxy 804379218602095682779\n",
+      "op mainnet | BaseFeeVault: Proxy 132796296393862548890\n",
+      "op mainnet | L1FeeVault: Proxy 2379284741915407004776\n",
+      "base | SequencerFeeVault: Proxy 0\n",
+      "base | BaseFeeVault: Proxy 15636799320591736912\n",
+      "base | L1FeeVault: Proxy 522816712785375471781\n",
+      "zora network | SequencerFeeVault: Proxy 65841638794920689343\n",
+      "zora network | BaseFeeVault: Proxy 0\n",
+      "zora network | L1FeeVault: Proxy 36301274667904967258\n",
+      "public goods network | SequencerFeeVault: Proxy 0\n",
+      "public goods network | BaseFeeVault: Proxy 0\n",
+      "public goods network | L1FeeVault: Proxy 0\n"
+     ]
+    }
+   ],
    "source": [
     "for chain in chains_rpcs:\n",
     "    chain_name = chain[0]\n",
@@ -64,8 +84,8 @@
     "    for vault in fee_vaults:\n",
     "        vault_name = vault[0]\n",
     "        vault_address = vault[1]\n",
-    "        vault_abi = vault[2]\n",
-    "        implementation_abi = vault[3]\n",
+    "        vault_abi = json.loads(vault[2])\n",
+    "        implementation_abi = json.loads(vault[3])\n",
     "\n",
     "        implementation_contract = w3py.get_implementation_contract(w3_conn, vault_address, vault_abi)\n",
     "        time.sleep(1)\n",
@@ -76,6 +96,13 @@
     "        print(chain_name + ' | ' + vault_name + ': Proxy ' + str(proxy_processed))\n",
     "        time.sleep(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
