--- a/contracts_tracking/get_runtime_bytecode_snippet.ipynb
+++ b/contracts_tracking/get_runtime_bytecode_snippet.ipynb
@@ -29,14 +29,16 @@
     "    #all\n",
     "     'totalSupply()'\n",
     "    ,'balanceOf(address)'\n",
+    "    ,'transferFrom(address,address,uint256)'\n",
     "    #erc20 and others\n",
     "    ,'transfer(address,uint256)'\n",
     "    #erc721 and others\n",
     "    ,'safeTransferFrom(address,address,uint256,bytes)'\n",
-    "    ,'transferFrom(address,address,uint256)'\n",
+    "    ,'ownerOf(uint256)'\n",
     "    #erc1155\n",
     "    ,'safeTransferFrom(address,address,uint256,uint256,bytes)'\n",
     "    ,'safeBatchTransferFrom(address,address,uint256[],uint256[],bytes)'\n",
+    "    ,'balanceOf(address,uint256)'\n",
     "]"
    ]
   },
